feat: add max explorers in one group for person