@@ -21,16 +21,13 @@ public class CorsConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        return new CorsConfigurationSource() {
-            @Override
-            public CorsConfiguration getCorsConfiguration(@NonNull ServerWebExchange exchange) {
-                CorsConfiguration config = new CorsConfiguration();
-                config.setAllowedOrigins(Collections.singletonList(exchange.getRequest().getHeaders().getOrigin()));
-                config.setAllowedMethods(List.of("POST", "GET", "OPTIONS", "PUT", "DELETE", "PATCH", "HEAD"));
-                config.setAllowedHeaders(List.of("Content-Type", "Authorization"));
-                config.setAllowCredentials(true);
-                return config;
-            }
+        return exchange -> {
+            CorsConfiguration config = new CorsConfiguration();
+            config.setAllowedOrigins(Collections.singletonList(exchange.getRequest().getHeaders().getOrigin()));
+            config.setAllowedMethods(List.of("POST", "GET", "OPTIONS", "PUT", "DELETE", "PATCH", "HEAD"));
+            config.setAllowedHeaders(List.of("Content-Type", "Authorization"));
+            config.setAllowCredentials(true);
+            return config;
         };
     }
 }
